2 - prototype of singleCharJump

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "commands": [
       {
         "command": "codeacejumper2.singlechar.jump",
-        "title": "Single Char Jump"
+        "title": "Code Ace Jumper 2: Single Char Jump"
       }
     ]
   },
