--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/LGala/CodeAceJumper2.git"
   },
+  "publisher": "LGala",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.77.0"
