--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "codeacejumper2",
   "displayName": "Code Ace Jumper 2",
-  "description": "Blazingly fast, smart, accurate and easy-to-use cursor movement",
+  "description": "Blazingly fast, smart, accurate and easy-to-use cursor jumper",
   "icon": "images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/LGala/CodeAceJumper2.git"
   },
   "publisher": "LGala",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.77.0"
   },
